--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -3,7 +3,7 @@
     "500": "500",
     "503": "503",
     "dashboard": "Trang chủ",
-    "department": "Phòng ban",
+    "department": "Đơn vị",
     "organizational_structure": "Sơ đồ cơ cấu tổ chức",
     "staff": "Nhân sự",
     "position": "Chức vụ",
@@ -18,33 +18,33 @@
     "save": "Lưu lại",
     "discard": "Loại bỏ",
     "delete": "Xóa bỏ",
-    "edit_department": "Chỉnh sửa phòng ban",
-    "detail_department": "Chi tiết phòng ban",
-    "add_department": "Tạo mới phòng ban",
-    "delete_department": "Xóa phòng ban",
-    "please_fill_name_department": "Vui lòng nhập Tên phòng ban",
-    "please_fill_departmentCode": "Vui lòng nhập Mã phòng ban",
+    "edit_department": "Chỉnh sửa đơn vị",
+    "detail_department": "Chi tiết đơn vị",
+    "add_department": "Tạo mới đơn vị",
+    "delete_department": "Xóa đơn vị",
+    "please_fill_name_department": "Vui lòng nhập Tên đơn vị",
+    "please_fill_departmentCode": "Vui lòng nhập Mã đơn vị",
     "please_fill_departmentName": "Vui lòng nhập Tên viết tắt",
     "please_fill_numOfHuman": "Vui lòng nhập số người",
-    "name_department": "Tên phòng ban",
-    "code_department": "Mã phòng ban",
+    "name_department": "Tên đơn vị",
+    "code_department": "Mã đơn vị",
     "num_human": "Số lượng con người",
-    "enter_name_department": "Nhập tên phòng ban",
-    "enter_code_department": "Nhập mã phòng ban",
+    "enter_name_department": "Nhập tên đơn vị",
+    "enter_code_department": "Nhập mã đơn vị",
     "enter_numhuman": "Nhập số người",
-    "add_department_success": "Tạo mới thành công phòng ban",
-    "edit_department_success": "Chỉnh sửa phòng ban thành công",
-    "delete_department_success": "Xóa phòng ban thành công",
-    "add_department_error": "Tạo mới phòng ban thất bại",
-    "edit_department_err": "Chỉnh sửa lỗi phòng ban",
-    "delete_department_success_department_err": "Xóa lỗi phòng ban",
-    "please_fill_department": "Vui lòng điền phòng ban",
-    "please_choose_department": "Vui lòng chọn phòng ban",
-    "select_departmentparent": "Chọn phòng ban trực thuộc",
-    "Department_Parent": "Phòng ban trực thuộc",
-    "choose_department": "Chọn phòng ban",
-    "personel_department": "Phòng ban",
-    "department_list": "Danh sách phòng ban",
+    "add_department_success": "Tạo mới thành công đơn vị",
+    "edit_department_success": "Chỉnh sửa đơn vị thành công",
+    "delete_department_success": "Xóa đơn vị thành công",
+    "add_department_error": "Tạo mới đơn vị thất bại",
+    "edit_department_err": "Chỉnh sửa lỗi đơn vị",
+    "delete_department_success_department_err": "Xóa lỗi đơn vị",
+    "please_fill_department": "Vui lòng điền đơn vị",
+    "please_choose_department": "Vui lòng chọn đơn vị",
+    "select_departmentparent": "Chọn đơn vị trực thuộc",
+    "Department_Parent": "Đơn vị trực thuộc",
+    "choose_department": "Chọn đơn vị",
+    "personel_department": "Đơn vị",
+    "department_list": "Danh sách đơn vị",
     "delete_warehouse": "Xóa kho",
     "delete_warehouse_success": "Xóa kho thành công",
     "delete_warehouse_error": "Xóa kho lỗi",
@@ -764,7 +764,7 @@
     "repair_infomation": "Thông tin sửa chữa",
     "please_fill_abbreviated_name": "Vui lòng nhập tên viết tắt",
     "please_fill_manager": "Vui lòng chọn quản lý trực tiếp",
-    "please_fill_parent_department": "Vui lòng chọn phòng ban trực thuộc",
+    "please_fill_parent_department": "Vui lòng chọn đơn vị trực thuộc",
     "enter_abbreviated_name": "Nhập tên viết tắt",
     "date_create": "Ngày tạo",
     "please_add_infomation": "Vui lòng thêm thông tin",
@@ -928,11 +928,11 @@
     "Find one Contract": "Chi tiết hợp đồng",
     "Remove Contract": "Xoá hợp đồng",
     "Update Contract": "Chỉnh sửa hợp đồng",
-    "Create Department": "Tạo mới phòng ban",
-    "Get list type tree Department": "Danh sách phòng ban",
-    "Find one Department": "Chi tiết phòng ban",
-    "Remove Department": "Xoá phòng ban",
-    "Update Department": "Chỉnh sửa phòng ban",
+    "Create Department": "Tạo mới đơn vị",
+    "Get list type tree Department": "Danh sách đơn vị",
+    "Find one Department": "Chi tiết đơn vị",
+    "Remove Department": "Xoá đơn vị",
+    "Update Department": "Chỉnh sửa đơn vị",
     "Create ForgotCheckinOut": "Tạo mới Đơn quên chấm công",
     "Remove ForgotCheckinOut": "Xoá Đơn quên chấm công",
     "Update ForgotCheckinOut": "Chỉnh sửa Đơn quên chấm công",
@@ -1505,8 +1505,8 @@
     "name_timekeeper": "Tên máy chấm công",
     "code_timekeeper": "Mã máy chấm công",
     "position_timekeeper": "Vị trí đặt máy chấm công",
-    "department_timekeeper": "Phòng ban chấm công",
-    "choose_department_timekeeper": "Chọn phòng ban chấm công",
+    "department_timekeeper": "Đơn vị chấm công",
+    "choose_department_timekeeper": "Chọn đơn vị chấm công",
     "create_timekeeper_success": "Tạo thành công máy chấm công",
     "update_timekeeper_success": "Chỉnh sửa máy chấm công thành công",
     "update_timekeeper_error": "Chỉnh sửa máy chấm công thất bại",
@@ -1519,7 +1519,7 @@
     "delete_timekeeper_error" : "Xoá máy chấm công thất bại",
     "please_fill_name_timekeeper" : "Vui lòng nhập tên máy chấm công",
     "please_fill_wageRate" : "Vui lòng nhập hệ số công",
-    "please_fill_department_timekeeper" : "Vui lòng chọn phòng ban chấm công",
+    "please_fill_department_timekeeper" : "Vui lòng chọn đơn vị chấm công",
     "please_fill_location_timekeeper" : "Vui lòng nhập vị trí đặt máy chấm công",
     "export_file_error": "Tải file bị lỗi",
     "choose_shift_": "Chọn ca làm việc",
