--- a/public/locales/vn.json
+++ b/public/locales/vn.json
@@ -1,6 +1,6 @@
 {
     "dashboard": "Trang chủ",
-    "department": "Phòng ban",
+    "department": "Đơn vị",
     "organizational_structure": "Cơ cấu tổ chức",
     "staff": "Nhân sự",
     "position": "Chức vụ",
@@ -21,24 +21,24 @@
     "download": "Tải xuống",
     "discard": "Hủy",
     "description": "Mô tả",
-    "add_department": "Thêm phòng ban",
-    "edit_department": "Sửa phòng ban",
-    "delete_department": "Xóa phòng ban",
-    "please_fill_name_department": "Vui lòng nhập tên phòng ban",
-    "please_fill_departmentCode": "Vui lòng nhập mã phòng ban",
+    "add_department": "Thêm đơn vị",
+    "edit_department": "Sửa đơn vị",
+    "delete_department": "Xóa đơn vị",
+    "please_fill_name_department": "Vui lòng nhập tên đơn vị",
+    "please_fill_departmentCode": "Vui lòng nhập mã đơn vị",
     "please_fill_numOfHuman": "Vui lòng nhập số lượng nhân viên",
-    "name_department": "Tên phòng ban",
-    "code_department": "Mã phòng ban",
+    "name_department": "Tên đơn vị",
+    "code_department": "Mã đơn vị",
     "num_human": "Số lượng nhân viên",
-    "enter_name_department": "Nhập tên phòng ban",
-    "enter_code_department": "Nhập mã phòng ban",
+    "enter_name_department": "Nhập tên đơn vị",
+    "enter_code_department": "Nhập mã đơn vị",
     "enter_numhuman": "Nhập số lượng nhân viên",
-    "add_department_success": "Thêm phòng ban thành công",
-    "edit_department_success": "Sửa phòng ban thành công",
-    "edit_department_err": "Sửa phòng ban thất bại",
-    "delete_department_success": "Xóa phòng ban thành công",
-    "add_department_error": "Thêm phòng ban thất bại",
-    "delete_department_success_department_err": "Xóa phòng ban thất bại",
+    "add_department_success": "Thêm đơn vị thành công",
+    "edit_department_success": "Sửa đơn vị thành công",
+    "edit_department_err": "Sửa đơn vị thất bại",
+    "delete_department_success": "Xóa đơn vị thành công",
+    "add_department_error": "Thêm đơn vị thất bại",
+    "delete_department_success_department_err": "Xóa đơn vị thất bại",
     "add_staff": "Thêm nhân viên",
     "edit_staff": "Sửa nhân viên",
     "delete_staff": "Xóa nhân viên",
@@ -299,7 +299,7 @@
     "personel_name": "Tên nhân viên",
     "personel_code": "Mã nhân viên",
     "status": "Trạng thái",
-    "personel_position": "Phòng ban",
+    "personel_position": "Đơn vị",
     "personel_department": "Nơi công tác",
     "submitday": "Ngày nộp đơn",
     "registerday": "Ngày đăng ký",
@@ -321,7 +321,7 @@
     "delete_form": "Xóa đơn này",
     "please_choose_name": "Vui lòng chọn người nộp đơn",
     "please_choose_position": "Vui lòng chọn vị trí",
-    "please_choose_department": "Vui lòng chọn phòng ban",
+    "please_choose_department": "Vui lòng chọn đơn vị",
     "please_choose_submit_day": "Vui lòng chọn ngày nộp đơn",
     "please_choose_from_day": "Vui lòng chọn ngày bắt đầu",
     "please_choose_end_day": "Vui lòng chọn ngày kết thúc",
@@ -337,7 +337,7 @@
     "name": "Tên nhân viên",
     "choose_name": "Chọn người nộp đơn",
     "choose_position": "Chọn vị trí",
-    "choose_department": "Chọn phòng ban",
+    "choose_department": "Chọn đơn vị",
     "choose_submit_day": "Chọn ngày nộp đơn",
     "choose_from_day": "Chọn ngày bắt đầu",
     "choose_end_day": "Chọn ngày kết thúc",
@@ -366,7 +366,7 @@
     "detail_shift": "Chi tiết ca làm việc",
     "name_shift": "Tên ca làm việc",
     "type_shift": "Loại ca làm việc",
-    "department_apply": "Phòng ban áp dụng",
+    "department_apply": "Đơn vị áp dụng",
     "from_time": "Giờ bắt đầu",
     "end_time": "Giờ kết thúc",
     "add_shift": "Thêm ca làm việc",
@@ -374,7 +374,7 @@
     "time_shift": "Tổng thời gian làm việc (h)",
     "fill_name_shift": "Nhập tên ca làm việc",
     "choose_type_shift": "Chọn loại ca làm việc",
-    "choose_department_apply": "Chọn phòng ban áp dụng",
+    "choose_department_apply": "Chọn đơn vị áp dụng",
     "code_shift": "Mã ca",
     "time_total": "Tổng giờ làm",
     "work_coefficient": "Hệ số công",
